examples/deployment-example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: dev
spec:
  template:
    metadata:
      name: nginx-pod
      labels:
        demo: k8s-handson
        role: presetdemo
    spec:
      containers:
      - name: nginx-server
        image: nginx
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m        

  replicas: 2
  selector:
    matchLabels:
      demo: k8s-handson

  strategy:
    type: RollingUpdate
