examples/liveness-probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-probe-tcp
  labels:
    demo: k8s-handson
spec:
  containers:
  - name: liveness-probe-tcp
    image: ramaraja/webserver:1.0
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
    livenessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 15
      periodSeconds: 20
