examples/pod-example-1.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    demo: k8s-handson
    role: presetdemo
spec:
  containers:
  - name: nginx-server
    image: nginx
    imagePullPolicy: IfNotPresent
