examples/pod-example-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-1
  labels:
    demo: k8s-handson
    role: presetdemo
spec:
  containers:
  - name: nginx-server-1
    image: ramaraja/webserver:1.0
    imagePullPolicy: IfNotPresent
