examples/qos-burst.yml
apiVersion: v1
kind: Pod
metadata:
  name: qos-burstable
  labels:
    demo: k8s-handson
spec:
  containers:
  - name: qos-burstable
    image: nginx
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        memory: 512Mi
        cpu: 500m
      requests:
        memory: 512Mi
        cpu: 250m
