examples/service-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-cp
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
      protocol: TCP

  selector:
    demo: k8s-handson
